Doing Germany Stuff, Bernie is also Stuff
Germany Work
-locals
-focus
events
- mechanics

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -185,7 +185,7 @@
   PB_GER_Protect_Jewish_Institutions:0 "Protecting the Rights of Women and Jews"
   PB_GER_negotiate:0 "Negotiating with the German States"
   PB_GER_technological_advance:0 "Technological Advancements, Our Speciality"
-  PB_GER_reducing_military:0 "Reducing Military Budget"
+  PB_GER_ready_the_economy:0 "Preparing the Economy for War"
   PB_GER_no_time_heroes:0 "The Times of Heroes is Over"
   PB_GER_moral_standards:0 "Propaganda for Moral Standards"
   PB_GER_attacking_extremists:0 "Rooting out the Extremists"
@@ -719,6 +719,10 @@
   germany.61.d:0 ""
   germany.61.a:0 "Long Live Franz Ferdinand"
 
+  germany.70.t:0 "A Response to Mister Hugenberg's Remarks Regarding the Jewish People"
+  germany.70.d:0 ""
+  germany.70.a:0 "We are all Germans"
+
 
   ##########################
   # DECISIONS
@@ -875,6 +879,15 @@
   GER_Elsass_Unrest_Increase_Five_tt:0 "§YAlsatian Unrest will be increased by§! §R5§!\n"
   GER_Frankfurt_Unrest_Increase_Five_tt:0 "§YHessian Unrest will be increased by§! §R5§!\n"
 
+ GER_Rhineland_Unrest_Increase_Ten_tt:0 "§YRhenish Unrest will be increased by§! §R10§!\n"
+  GER_Brandenburg_Unrest_Increase_Ten_tt:0 "§YBrandenburger Unrest will be increased by§! §R10§!\n"
+  GER_Bavaria_Unrest_Increase_Ten_tt:0 "§YBavarian Unrest will be increased by§! §R10§!\n"
+  GER_Saxony_Unrest_Increase_Ten_tt:0 "§YSaxon Unrest will be increased by§! §R10§!\n"
+  GER_Hannover_Unrest_Increase_Ten_tt:0 "§YHannoverian Unrest will be increased by§! §R10§!\n"
+  GER_Austria_Unrest_Increase_Ten_tt:0 "§YAustrian Unrest will be increased by§! §R10§!\n"
+  GER_Elsass_Unrest_Increase_Ten_tt:0 "§YAlsatian Unrest will be increased by§! §R10§!\n"
+  GER_Frankfurt_Unrest_Increase_Ten_tt:0 "§YHessian Unrest will be increased by§! §R10§!\n"
+
   GER_All_Unrest_Reduce_Five_tt:0 "§YAll Unrest will be reduced by§! §G5§!\n"
   GER_All_Unrest_Reduce_Ten_tt:0 "§YAll Unrest will be reduced by§! §G10§!\n"
   GER_All_Unrest_Reduce_Fiveteen_tt:0 "§YAll Unrest will be reduced by§! §G15§!\n"
@@ -884,9 +897,9 @@
   GER_All_Unrest_Increase_Ten_tt:0 "§YAll Unrest will be increased by§! §R10%§!\n"
   GER_All_Unrest_Increase_Twenty_tt:0 "§YAll Unrest will be increased by§! §R20%§!\n"
 
-  PB_GER_All_Unrest_Under_Fifty_tooltip:0 "§YUnrest in all Autonomies is below§! §R50%§!\n"
-  PB_GER_All_Unrest_Under_25_tooltip:0 "§YUnrest in all Autonomies is below§! §R25%§!\n"
-  GER_Unrest_Cleared:0 "§YUnrest in all Autonomies is permanently cleared§!\n"
+  PB_GER_All_Unrest_Under_Fifty_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R50%§!\n"
+  PB_GER_All_Unrest_Under_25_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R25%§!\n"
+  GER_Unrest_Cleared:0 "§YUnrest in all Volksstaaten is permanently cleared§!\n"
 
   PB_GER_Event_Unrest_Fifty_Fifty:0 "There is a §Y50%§! chance that unrest in this province will be reduced by 10% and a §Y50%§! that unrest will increase by 10%"
 
@@ -913,7 +926,7 @@
   french_terrorism_2:0 "The Alsace National Union Party"
   
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
-  GER_PB_Tooltip_Costs:0 "§YThe Decisions Cost, to reduce Unrest in the Volksstaaten, will be§! §Greduced and made all the same.§!"
+  GER_PB_Tooltip_Costs:0 "§YThe Decision Cost, to reduce Unrest in the Volksstaaten, will be§! §Greduced and made all the same.§!"
 
   GER_Sudwestafrika_Elite_Division_tt:0 "§YSüdwestafrika will receive an elite division to bolster their fighting strength.§! "
 
