religion mechanic prototype :flushed:
and a little easter egg

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  LOADING_TIP_0:0 "No committee ever has, or ever will, run a revolution.\n- §YAnnie Kenney§!"
  LOADING_TIP_1:0 "We should have known better after the first war.\n- §YCharles de Gaulle§!"
- LOADING_TIP_2:0 "People who are hungry and out of a job are the stuff of which dictatorships are made.\n- §YOswald Mosley§!"
+ LOADING_TIP_2:0 "People who are hungry and out of a job are the stuff of which dictatorships are made.\n- §YTheodoor Roosenvelt§!"
  LOADING_TIP_3:0 "Isn't it dreadful? Here we are, two officers of the Empire, discussing how best to murder our Emperor.\n- §YCai E§!"
  LOADING_TIP_4:0 "Why Die for Wallonia?\n- §YGerman Anti-War Slogan§!"
  LOADING_TIP_5:0 "I fear all we have done is awaken a sleeping giant and fill him with a terrible resolve.\n- §YFrançois Darlan§!"
