--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -713,6 +713,10 @@
   PB_RUS_topic_eight_the_future_of_russia:0 "Topic Eight: The Future Of Russia"
   PB_RUS_topic_eight_the_future_of_russia_desc:0 ""
 
+  ###ALEXANDRA DECISIONS
+PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
+PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
+PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
 
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
