--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -9,6 +9,7 @@
  VICTORY_POINTS_321:0 "Rostock"
  VICTORY_POINTS_514:0 "Dresden"
  VICTORY_POINTS_587:0 "Köln"
+ VICTORY_POINTS_3488:0 "Aachen"
  VICTORY_POINTS_3326:0 "Bremen"
  VICTORY_POINTS_3522:0 "Magdeburg"
  VICTORY_POINTS_3535:0 "Leipzig"
