--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -718,7 +718,7 @@
 
   PB_RUS_The_Great_March_Forward:0 "The Great March Forward"
   PB_RUS_Trust_In_Ponomarenko:0 "Trust In Ponomarenko"
-  PB_RUS_Focus_On_Heavy_Industry:0 "Focus On Heavy Industry"
+  PB_RUS_Focus_On_Heavy_Industry:0 "Focus On Civilian Industry"
   PB_RUS_Exploit_The_Earth:0 "Exploit The Earth"
   PB_RUS_Industrial_Grants:0 "Industrial Grants"
   PB_RUS_Eager_Hands_Demand_Work:0 "Eager Hands Demand Work"
@@ -740,11 +740,26 @@
   PB_RUS_Working_To_Build_A_Better_Tomorrow:0 "Working To Build A Better Tomorrow"
   PB_RUS_The_Second_Renaissance:0 "The Second Renaissance"
   PB_RUS_The_Worlds_Factory:0 "The World's Factory"
+  PB_RUS_Faith_In_Mikoyan:0 "Faith In Mikoyan"
+  PB_RUS_Focus_On_Military_Industry:0 "Focus On Military Industry"
+  PB_RUS_Armement_Efforts:0 "Armement Efforts"
+  PB_RUS_Scratch_My_Back_And_Ill_Scratch_Yours:0 "Scratch My Back And I'll Scratch Yours"
+  PB_RUS_Your_Welfare_Is_Your_Work:0 "Your Welfare Is Your Work"
+  PB_RUS_Encourage_Eurasian_Trade:0 "Encourage Eurasian Trade"
+  PB_RUS_Closed_Industrial_Complexes:0 "Closed Industrial Complexes"
+  PB_RUS_City_Planning_Investments:0 "City Planning Investments"
+  PB_RUS_Search_The_Market_For_Rubber:0 "Search The Market For Rubber"
+  PB_RUS_Resorts_In_The_Caucasus:0 "Resorts In The Caucasus"
+  PB_RUS_Encourage_Investors:0 "Encourage Investors"
+  PB_RUS_New_World_Ventures:0 "New World Ventures"
+  PB_RUS_The_Hong_Kong_Of_Manchuria:0 "The Hong Kong Of Manchuria"
+  PB_RUS_Funding_For_The_Governates:0 "Funding For The Governates"
+  PB_RUS_A_Militarized_Economy:0 "A Militarized Economy"
 
   ###ALEXANDRA DECISIONS
-PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
-PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
-PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
+  PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
+  PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
+  PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
 
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
@@ -873,6 +888,7 @@ PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
   PB_RUS_kiril_making_use_lysenkos_experiments:0 "Making use of Lysenko's Experiments"
   PB_RUS_kiril_people_must_stay_strong:0 "The People Must Stay Strong"
   PB_RUS_kiril_new_russian_man_will_prevail:0 "The New Russian Man Will Prevail"
+
   #ALEXEI FOCUS
   PB_RUS_alexei_ascendant:0 "§RAlexei Ascendant§!"
   PB_RUS_alexei_ascendant_desc:0 "placeholder"
