--- a/localisation/supply_area_names_l_english.yml
+++ b/localisation/supply_area_names_l_english.yml
@@ -343,15 +343,18 @@
  SUPPLYAREA_343:0 "SupplyArea"
  SUPPLYAREA_344:0 "SupplyArea"
  SUPPLYAREA_345:0 "SupplyArea"
- SUPPLYAREA_346:0 "FaroeIslands"
- SUPPLYAREA_347:0 "JohnstonAtoll"
- SUPPLYAREA_348:0 "Jamaica"
- SUPPLYAREA_349:0 "Ascension"
- SUPPLYAREA_350:0 "DiegoGarcia"
- SUPPLYAREA_351:0 "ChristmasIslands"
- SUPPLYAREA_352:0 "CocosIslands"
- SUPPLYAREA_353:0 "KerguelenIslands"
- SUPPLYAREA_354:0 "SUPPLYAREA_354"
+ SUPPLYAREA_346:0 "SupplyArea"
+ SUPPLYAREA_347:0 "SupplyArea"
+ SUPPLYAREA_348:0 "SupplyArea"
+ SUPPLYAREA_349:0 "SupplyArea"
+ SUPPLYAREA_350:0 "SupplyArea"
+ SUPPLYAREA_351:0 "SupplyArea"
+ SUPPLYAREA_352:0 "SupplyArea"
+ SUPPLYAREA_353:0 "SupplyArea"
+ SUPPLYAREA_354:0 "SupplyArea"
  SUPPLYAREA_355:0 "SupplyArea"
  SUPPLYAREA_356:0 "SupplyArea"
  SUPPLYAREA_357:0 "SupplyArea"
+ SUPPLYAREA_358:0 "SupplyArea"
+ SUPPLYAREA_359:0 "SupplyArea"
+ SUPPLYAREA_360:0 "SupplyArea"
