--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -228,10 +228,9 @@
   ##########################
   # MINISTERS/LEADERS/Traits
   ##########################
-  POLITICS_Emergency_Duma_DESC:0 "§YTemporary Leadership§!\n\nWith the Tsar dead and no direct claimants of suitable age to take the throne it is unsurprising to say the Duma has assumed responsibility of leading the nation, even if temporary. Riots are numerous, public gatherings are large, and the air is thick with unrest. If a succesor isn't named, legaly or not, all hell will soon break loose."
+  
   PB_Lost_Son:0 "The Lost Tsarevich"
-  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
-  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the §YTsar§! dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany.\n\nA Great War veteran has garnered §YWrangel§! a comfortable collection of friends in high places and a strong connection with the military. His previous record of being head of the Okhrana has also alleviated his political situation and all seems well in the higher echelons of Russian society as a result.\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
+  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!" 
   PB_Okhrana_Connections:0 "Okhrana Connections"
   RUS_Chubar:0 "Vlas Chubar"
   RUS_Matskevich:0 "Vladimir Matskevich"
@@ -244,6 +243,7 @@
   RUS_Georgy_Katzman_EM:0 "Georgy Katzman"
   RUS_Nikolai_Markov_IM:0 "Nikolai Markov"
   RUS_Lavr_Kornilov_SIM:0 "Lavr Kornilov"
+  
   #KIRILL
   RUS_mikhail_rodzianko_HOG:0 "Mikhail Rodzianko"
   RUS_sergei_witte_EM:0 "Sergei Witte"
@@ -252,8 +252,14 @@
   RUS_nicholas_nikolaevich_SIM:0 "Nicholas Nikolaevich"
   RUS_nicholas_nikolaevich_cooler_SIM:0 "Grand Duke Nicholas Nikolaevich"
   RUS_trofim_lysenko_SIM:0 "Trofim Lysenko"
-  # Alexei's Bright Ideas
+
+  # ALEXEI
   RUS_alexei_secure_the_throne_timed:0 "Secure the Throne!"
+
+  #ALEXANDRA
+  RUS_Tesla_EM:0 "Nikola Tesla"
+  RUS_Mikoyan_EM:0 "Anastas Mikoyan"
+ 
 
 
   ##########################
@@ -332,143 +338,6 @@
   ##########################
   # EVENTS
   ##########################
-  RUS.1.t:0 ""
-  RUS.1.d:0 ""
-  RUS.1.a:0 ""
-  RUS.1.b:0 ""
-  RUS.2.t:0 ""
-  RUS.2.d:0 ""
-  RUS.2.a:0 ""
-  RUS.3.t:0 ""
-  RUS.3.d:0 ""
-  RUS.3.a:0 ""
-  RUS.4.t:0 ""
-  RUS.4.d:0 ""
-  RUS.4.a:0 ""
-  RUS.5.t:0 ""
-  RUS.5.d:0 ""
-  RUS.5.a:0 ""
-  RUS.6.t:0 ""
-  RUS.6.d:0 ""
-  RUS.6.a:0 ""
-  RUS.7.t:0 ""
-  RUS.7.d:0 ""
-  RUS.7.a:0 ""
-  RUS.8.t:0 ""
-  RUS.8.d:0 ""
-  RUS.8.a:0 ""
-  RUS.9.t:0 ""
-  RUS.9.d:0 ""
-  RUS.9.a:0 ""
-  RUS.10.t:0 ""
-  RUS.10.d:0 ""
-  RUS.10.a:0 ""
-  RUS.10.b:0 ""
-  RUS.10.c:0 ""
-  RUS.11.t:0 ""
-  RUS.11.d:0 ""
-  RUS.11.a:0 ""
-  RUS.12.t:0 ""
-  RUS.12.d:0 ""
-  RUS.12.a:0 ""
-  RUS.13.t:0 ""
-  RUS.13.d:0 ""
-  RUS.13.a:0 ""
-  RUS.14.t:0 ""
-  RUS.14.d:0 ""
-  RUS.14.a:0 ""
-  RUS.15.t:0 ""
-  RUS.15.d:0 ""
-  RUS.15.a:0 ""
-  RUS.15.b:0 ""
-  RUS.16.t:0 ""
-  RUS.16.d:0 ""
-  RUS.16.a:0 ""
-  RUS.17.t:0 "" 
-  RUS.17.d:0 ""
-  RUS.17.a:0 ""
-  RUS.18.t:0 ""
-  RUS.18.d:0 ""
-  RUS.18.a:0 ""
-  RUS.19.t:0 ""
-  RUS.19.d:0 "" 
-  RUS.19.a:0 ""
-  RUS.20.t:0 ""
-  RUS.20.d:0 ""
-  RUS.20.a:0 ""
-  RUS.21.t:0 ""
-  RUS.21.d:0 ""
-  RUS.21.a:0 ""
-  RUS.22.t:0 ""
-  RUS.22.d:0 ""
-  RUS.22.a:0 ""
-  RUS.23.t:0 ""
-  RUS.23.d:0 "" 
-  RUS.23.a:0 ""
-  RUS.24.t:0 ""
-  RUS.24.d:0 ""
-  RUS.24.a:0 ""
-  RUS.25.t:0 ""
-  RUS.25.d:0 ""
-  RUS.25.a:0 ""
-  RUS.26.t:0 ""
-  RUS.26.d:0 ""
-  RUS.26.a:0 ""
-  RUS.26.b:0 ""
-  RUS.26.c:0 "" 
-  RUS.27.t:0 ""
-  RUS.27.d:0 ""
-  RUS.27.a:0 ""
-  RUS.27.b:0 ""
-  RUS.28.t:0 ""
-  RUS.28.d:0 ""
-  RUS.28.a:0 ""
-  RUS.28.b:0 ""
-  RUS.29.t:0 ""
-  RUS.29.d:0 ""
-  RUS.29.a:0 ""
-  RUS.29.b:0 ""
-  RUS.29.c:0 ""
-  RUS.30.t:0 ""
-  RUS.30.d:0 ""
-  RUS.30.a:0 ""
-  RUS.30.b:0 ""
-  RUS.31.t:0 "" 
-  RUS.31.d:0 ""
-  RUS.31.a:0 ""
-  RUS.32.t:0 ""
-  RUS.32.d:0 ""
-  RUS.32.a:0 ""
-  RUS.33.t:0 ""
-  RUS.33.d:0 ""
-  RUS.33.a:0 ""
-  RUS.34.t:0 ""
-  RUS.34.d:0 ""
-  RUS.34.a:0 ""
-  RUS.35.t:0 ""
-  RUS.35.d:0 ""
-  RUS.35.a:0 ""
-  RUS.36.t:0 ""
-  RUS.36.d:0 ""
-  RUS.36.a:0 ""
-  RUS.37.t:0 ""
-  RUS.37.d:0 ""
-  RUS.37.a:0 ""
-  RUS.37.b:0 ""
-  RUS.37.c:0 ""
-  RUS.38.t:0 ""
-  RUS.38.d:0 ""
-  RUS.38.a:0 ""
-  RUS.39.t:0 ""
-  RUS.39.d:0 ""
-  RUS.39.a:0 ""
-  RUS.39.b:0 ""
-  RUS.39.c:0 ""
-  RUS.40.t:0 ""
-  RUS.40.d:0 ""
-  RUS.40.a:0 ""
-  RUS.40.b:0 ""
-  RUS.40.c:0 ""
   RUS.41.t:0 "Death, Taxes, And Royalty"
   RUS.41.d:0 ""
   RUS.41.a:0 "Play As Kirill"
@@ -477,6 +346,7 @@
   RUS.42.t:0 "Operation: Skazki"
   RUS.42.d:0 ""
   RUS.42.a:0 ""
+
   #KIRILL EVENTS  
   RUS_kirill.1.t:0 "The Cousin on the Throne"
   RUS_kirill.1.d:0 ""
@@ -588,6 +458,7 @@
   RUS_kirill.32.t:0 "March of the Motherland"
   RUS_kirill.32.d:0 ""
   RUS_kirill.32.a:0 "Onwards oh Prideful Bear!"
+
   # ALEXEI EVENTS #
   RUS_alexei.1.t:0 "Alexei Ascends to Power"
   RUS_alexei.1.d:0 "placeholder"
@@ -601,6 +472,22 @@
   RUS_alexei.4.t:0 "The Greatest Undertaking"
   RUS_alexei.4.d:0 "placeholder"
   RUS_alexei.4.a:0 "placeholder"
+
+  # ALEXANDRA EVENTS #
+  RUS_Alexandra.1.t:0 "The Great March Forward"
+  RUS_Alexandra.1.d:0 ""
+  RUS_Alexandra.1.a:0 "A New Queen, A New Russia"
+  RUS_Alexandra.2.t:0 "The Brute"
+  RUS_Alexandra.2.d:0 ""
+  RUS_Alexandra.2.a:0 "Russia Will Prosper Under Ponomanrenko's Guidance"
+  RUS_Alexandra.3.t:0 "The Teacher"
+  RUS_Alexandra.3.d:0 ""
+  RUS_Alexandra.3.a:0 "Russia Will Prosper Under Tesla's Guidance"
+  RUS_Alexandra.4.t:0 "The Iron Head"
+  RUS_Alexandra.4.d:0 ""
+  RUS_Alexandra.4.a:0 "Russia Will Prosper Under Mikoyan's Guidance"
+
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -1414,6 +1301,10 @@
   # ALEXANDRA TOOLTIPS #
   PB_RUS_The_Rich_Get_Richer_tt:0 "\nThe Minimum Value For Nobility And Elite Happiness Will be §PRaised§!"
   PB_RUS_Mobilize_The_Cliques_tt:0 "\nThe Minimum Value For Military Happiness Will be §PRaised§!"
+
+  PB_RUS_Faith_In_Mikoyan_tt:0 "\nMikoyan seeks to rapidly expand Russia's military might; he will increase military funding and will place a heavy emphasis on consolidating Russia's various trade markets"
+  PB_RUS_Trust_In_Ponomarenko_tt:0 "\nPonomarenko will begin a massive national effort towards industrialization, specifically regarding the civilian sector. He will also promote the ideals of Autarky through extensive mining efforts. "
+  PB_RUS_Confidence_In_Tesla_tt:0 "\nTesla will rid Russia of it's illiteracy and make great strides in the untamed fields of capitalism. Economic deals with companies, old and new will be sought after."
 
   # ALEXEI TOOLTIPS #
   PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
