I typed a few lines of code and got bored

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -226,7 +226,7 @@
   RUS_Country_Desc_Topbar:0 "§YRussia§! is the undisputed hegemony in Eurasia in 1933.\n\nRussia has by far seen better days. Though a victor of the Great War this has ultimately amounted into minor gains in the form of territorial expansions. Unlike the then once believed idea that the war was some how going to fix the Russian bear's issues, this was false and folly.\n\nThe incompetent Tsar as a result had retreated into a life of solitude, blaming all his failures on his once considered allies. Though there is still hope for the Russian people, With the Tsar now slowly dying a painiful death the political sphere has begun to shift, everyday a figure of great importance to the Tsar goes missing, a position in government is changed, and one less loyal individual gains power. All know what the outcome will be for the Tsar in the coming days, alive or not.\n\nTime will tell if Russia will once again ascend into glory or fall and crumble like many have before her.\n\nRussia is a §YMajor Power§!."
 
   ##########################
-  # MINISTERS/LEADERS/Traits
+  # MINISTERS/LEADERS/TRAITS
   ##########################
   
   PB_Lost_Son:0 "The Lost Tsarevich"
@@ -283,6 +283,9 @@
   PB_RUS_Unity_Festivals:0 "Unity Festivals"
   PB_RUS_The_High_Life:0 "The High Life"
   PB_RUS_Rehabilitation_Camps_Idea:0 "Rehabilitation Camps"
+  PB_RUS_Focusing_On_The_Civilian_Sector:0 "Focusing On The Civilian Sector"
+  PB_RUS_Focusing_On_The_Civilian_Sector_2:0 "Focusing On The Civilian Sector"
+  PB_RUS_Focusing_On_The_Civilian_Sector_3:0 "Focusing On The Civilian Sector"
 
   ## Ideas For The Russian Collapse ##
 
