Yes we Germans like Money, we love money  just like your m-
- a lot of germany focus modding
- new idea icon
- locals

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -79,6 +79,10 @@
   PB_GER_Caught_Off_Guard:0 "Caught Unprepared"
   PB_GER_Libertine_Culture:0 "Libertine Culture"
   PB_GER_Libertine_Culture_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
+  PB_GER_Libertine_Culture_2:0 "Libertine Culture"
+  PB_GER_Libertine_Culture_2_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
+  PB_GER_Libertine_Culture_3:0 "Libertine Culture"
+  PB_GER_Libertine_Culture_3_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
   PB_GER_Political_Violence_0:0 "Significant Political Violence"
   PB_GER_Political_Violence_0_desc:0 "Though Germany achieved near total victory in the Great War, the aftermath has been anything but victorious. With the economy in shambles, ill-intentioned radicals are stirring up trouble throughout the fatherland. Jacobin revolutionaries speak to packed coffee houses, spouting the doctrine of revolution and socialist utopia. Hardline nationalists pour into the beer halls of Bavaria and Berlin, eager to denounce everything from the Jacobins to the Jews. Outbreaks of political violence are not uncommon and thus far the administration has been unwilling to crack down on them openly for fear of exacerbating the issue."
   PB_GER_Political_Violence_Black:0 "The Brown Resistance"
@@ -140,6 +144,9 @@
   PB_GER_Cheaper_Planes:0 "Mass Production of Fighter Planes"
   PB_GER_Feuerbomben:0 "Extensive Firebombing"
   PB_GER_Feuerbomben_desc:0 "I have come to realize the body is its own pyre, that degree\nrises from within, the fatty acids a kind of kindling.\nLike a scientist in a lab, this much I have established, blood jelled\nlike gasoline, the years spread before me like a map\npinned with targets, where I’m raging even now.\nIt works both ways. Clear the forests to see your enemies\nand your enemies see you clearly. Like all effective incendiaries,\nI won’t only bloom where I’m planted."
+  PB_GER_Long_Term_Investment:0 "Long Term Economic Investment Model"
+  PB_GER_Long_Term_Investment_1:0 "Long Term Economic Investment Model"
+  PB_GER_Long_Term_Investment_2:0 "Long Term Economic Investment Model"
 
   ##########################
   # FOCUSES
@@ -189,7 +196,7 @@
   PB_GER_negotiate:0 "Negotiating with the German States"
   PB_GER_technological_advance:0 "Technological Advancements, Our Speciality"
   PB_GER_ready_the_economy:0 "Preparing the Economy for War"
-  PB_GER_no_time_heroes:0 "The Times of Heroes is Over"
+  PB_GER_no_time_heroes:0 "Times of Comfort are Over"
   PB_GER_moral_standards:0 "Propaganda for Moral Standards"
   PB_GER_attacking_extremists:0 "Rooting out the Extremists"
   PB_GER_future_germany:0 "The Germany of the Future is here"
@@ -928,7 +935,15 @@
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "§YThe Decision Cost, to reduce Unrest in the Volksstaaten, will be§! §Greduced and made all the same.§!"
 
+  GER_Secret_War_Economy:0 "§YDecisions will be unlocked to prepare Rathenau's Ideal Total War System§!\n§RDo not underestimate the German Economy!§!"
+
   GER_Sudwestafrika_Elite_Division_tt:0 "§YSüdwestafrika will receive an elite division to bolster their fighting strength.§! "
+
+  ruhr_boom_tt:0 "Has completed Decision §Y"Foster a Second Ruhr Boom"§!"
+  czech_steel_tt:0 "Has completed Decision §Y"Bail Out the Bohemian Steel Companies"§!"
+  industrial_recovery_tt:0 "Has completed Decision §Y"National Industrial Recovery Act"§!"
+  employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
+  
 
   ##########################
   # COSMETIC TAGS
