WIP Russia stuff plus some new gfx

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -745,6 +745,8 @@
 PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
 PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
 PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
+PB_RUS_peasent_worker_decisions:0 "Peasent-Worker Decisions"
+PB_RUS_peasent_worker_decisions_desc:0 "Percent of Workers: [?RUS_number_of_workers]\nPercent of Peasents: [?RUS_number_of_peasents]"
 
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
