Interface work and Russia stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -156,6 +156,7 @@
   PB_RUS_Peasants_Satisfaction_0.5_Neg_tt:0 "Peasant Satisfaction Will Slightly §RRegress§!"
 
   PB_RUS_All_Satisfaction_tt:0 "All Social Classes Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_All_Satisfaction_Regress_tt:0 "All Social Classes Satisfaction Will Greatly §RRegress§!"
 
   ##########################
   #POWER STRUGGLE
@@ -286,6 +287,7 @@
   PB_RUS_Focusing_On_The_Civilian_Sector:0 "Focusing On The Civilian Sector"
   PB_RUS_Focusing_On_The_Civilian_Sector_2:0 "Focusing On The Civilian Sector"
   PB_RUS_Focusing_On_The_Civilian_Sector_3:0 "Focusing On The Civilian Sector"
+  PB_RUS_Siberian_Railway_Initiative:0 "The Siberian-Railway Initiative"
 
   ## Ideas For The Russian Collapse ##
 
@@ -1310,9 +1312,10 @@ PB_RUS_peasent_worker_decisions_desc:0 "Percent of Workers: [?RUS_number_of_work
   PB_RUS_The_Rich_Get_Richer_tt:0 "\nThe Minimum Value For Nobility And Elite Happiness Will be §PRaised§!"
   PB_RUS_Mobilize_The_Cliques_tt:0 "\nThe Minimum Value For Military Happiness Will be §PRaised§!"
 
-  PB_RUS_Faith_In_Mikoyan_tt:0 "\nMikoyan seeks to rapidly expand Russia's military might; he will increase military funding and will place a heavy emphasis on consolidating Russia's various trade markets"
-  PB_RUS_Trust_In_Ponomarenko_tt:0 "\nPonomarenko will begin a massive national effort towards industrialization, specifically regarding the civilian sector. He will also promote the ideals of Autarky through extensive mining efforts. "
-  PB_RUS_Confidence_In_Tesla_tt:0 "\nTesla will rid Russia of it's illiteracy and make great strides in the untamed fields of capitalism. Economic deals with companies, old and new will be sought after."
+  PB_RUS_Faith_In_Mikoyan_tt:0 "\nMikoyan seeks to rapidly expand Russia's military might; he will increase military funding and will place a heavy emphasis on consolidating Russia's various trade markets.\n\n"
+  PB_RUS_Trust_In_Ponomarenko_tt:0 "\nPonomarenko will begin a massive national effort towards industrialization, specifically regarding the civilian sector. He will also promote the ideals of Autarky through extensive mining efforts.\n\n"
+  PB_RUS_Confidence_In_Tesla_tt:0 "\nTesla will rid Russia of it's illiteracy and make great strides in the untamed fields of capitalism. Economic deals with companies, old and new will be sought after.\n\n"
+  PB_RUS_Disslove_The_Peasantry_tt:0 "\nGreat efforts will be made to rid Russia of it's serfdom; this will be done through the §PPeasant-Worker§! mechanic. Many social classes will actively respond with aggression so it is highly recommended that you try to please at least a majority of said classes to avoid destabilization.\n\n"
 
   # ALEXEI TOOLTIPS #
   PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
