--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -369,8 +369,8 @@
   PBNews.95.a:0 "How much longer can Europe last?"
 
   PBNews.96.t:0 "DUTCH CRISIS ESCALATES"
-  PBNews.96.d:0 ""
-  PBNews.96.a:0 "Have we reached the French end game?"
+  PBNews.96.d:0 "Despite all attempts at peace, war has struck Europe. Recent French foreign policy has been heavily expansionistic in nature, with Dietsland being one such area of interest. France since sent an ultimatum to the Dutch, demanding their surrender or face invasion. In response Dietsland quickly contacted their allies in the United Kingdoms of Germany. Despite this promise of defence, France ignored them and has since declared war on the small nation. As Germany prepares to defend its allies, the storm of war has finally arrived in Europe."
+  PBNews.96.a:0 "War In Our Time"
 
   PBNews.97.t:0 "DUTCH CRISIS RELAXES"
   PBNews.97.d:0 ""
