Alexei kills traitors I

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -253,8 +253,7 @@
   RUS_nicholas_nikolaevich_cooler_SIM:0 "Grand Duke Nicholas Nikolaevich"
   RUS_trofim_lysenko_SIM:0 "Trofim Lysenko"
 
-  # ALEXEI
-  RUS_alexei_secure_the_throne_timed:0 "Secure the Throne!"
+  # ALEXEI #
 
   #ALEXANDRA
   RUS_Tesla_EM:0 "Nikola Tesla"
@@ -286,6 +285,12 @@
   PB_RUS_Focusing_On_The_Civilian_Sector:0 "Focusing On The Civilian Sector"
   PB_RUS_Focusing_On_The_Civilian_Sector_2:0 "Focusing On The Civilian Sector"
   PB_RUS_Focusing_On_The_Civilian_Sector_3:0 "Focusing On The Civilian Sector"
+
+  ## ALEXEI IDEAS ##
+  RUS_alexei_secure_the_throne_timed:0 "Secure the Throne!"
+  RUS_alexei_all_encompassing_bureaucracy_1:0 "All Encompassing Bureaucracies"
+  RUS_alexei_open_revolt:0 "§ROpen Revolt!§!"
+  RUS_alexei_open_revolt_2:0 "§OThreatening Revolt!§!"
 
   ## Ideas For The Russian Collapse ##
 
@@ -475,6 +480,21 @@
   RUS_alexei.4.t:0 "The Greatest Undertaking"
   RUS_alexei.4.d:0 "placeholder"
   RUS_alexei.4.a:0 "placeholder"
+  RUS_alexei.5.t:0 "Severing Ties"
+  RUS_alexei.5.d:0 "placeholder"
+  RUS_alexei.5.a:0 "Let's look further into it."
+  RUS_alexei.6.t:0 "Alexandra's Family"
+  RUS_alexei.6.d:0 "placeholder"
+  RUS_alexei.6.a:0 ""I want them out of my sight.""
+  RUS_alexei.6.b:0 ""
+  RUS_alexei.7.t:0 "Kirill's Family"
+  RUS_alexei.7.d:0 "placeholder"
+  RUS_alexei.7.a:0 ""
+  RUS_alexei.7.b:0 ""
+  RUS_alexei.8.t:0 "Status of the Outer Noble's"
+  RUS_alexei.8.d:0 "placeholder"
+  RUS_alexei.8.a:0 ""
+  RUS_alexei.8.b:0 ""
 
   # ALEXANDRA EVENTS #
   RUS_Alexandra.1.t:0 "The Great March Forward"
@@ -1189,7 +1209,8 @@
   PB_RUS_alexei_tree_load:0 "Load Alexei's Tree"
   PB_RUS_alexei_tree_load_desc:0 "The Based Man :flushed:"
   PB_RUS_kirill_tree_load:0 "Load Kirill's Tree"
-  PB_RUS_start_tree_load:0 "Load Starting Tree"
+  PB_RUS_Start_Tree_Load:0 "Load Starting Tree"
+  PB_RUS_Alexandra_Tree_Load:0 "Load Alexandra's Tree"
 
   # ALEXEI #
   PB_RUS_alexei_white_guard_sweep:0 "Initiate Urban White Guard Sweep Protocols"
@@ -1561,8 +1582,11 @@
  PB_RUS_alexei_last_man_standing:0 "Alexei and his White Guard have Quelled Dissent"
  PB_RUS_alexei_foreign_policy:0 "Russia Stands Ready to Pursue its Ultimate Goal"
  PB_RUS_alexei_white_guard_sweep_initiated:0 "§HWhite Guard§! urban protocol initiated."
+ PB_RUS_alexei_execute_nobles:0 "§LThe Noble's are no longer a threat to the Empire§!"
+ PB_RUS_alexei_protect_nobles:0 "§LThe Noble's have been placed under White Guard protection§!"
  
  # misc. #
  PB_RUS_alexei_tree:0 "Alexei's Tree"
  PB_RUS_kirill_tree:0 "Kirill's Tree"
  PB_RUS_starting_tree:0 "Russian Starting Tree"
+ PB_RUS_Alexandra_Tree:0 "Alexandra's Tree"
