Alexei kills Alexei

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -672,8 +672,12 @@
 PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
 PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
 PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
+
 PB_RUS_peasent_worker_decisions:0 "Peasent-Worker Decisions"
-PB_RUS_peasent_worker_decisions_desc:0 "Percent of Workers: [?RUS_number_of_workers]\nPercent of Peasents: [?RUS_number_of_peasents]"
+PB_RUS_peasent_worker_decisions_desc:0 "Percent of Unemployed Workers: [?RUS_number_of_workers]\nPercent of Peasents: [?RUS_number_of_peasents]"
+PB_RUS_at_least_three_workers:0 "At least 3% of the population is unemployed workers"
+RUS_percent_of_workers_minus_three_percent:0 "Three percent of unemployed workers will become workers"
+
   PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
   PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
   PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
