--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -671,7 +671,8 @@
   ###ALEXANDRA DECISIONS
 PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
 PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
-PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
+PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName] (Urban)"
+PB_RUS_religion_decision_rural:0 "Promote Strannikism in [FROM.GetName] (Rural)"
 
 PB_RUS_peasent_worker_decisions:0 "Peasent-Worker Decisions"
 PB_RUS_peasent_worker_decisions_desc:0 "Percent of Unemployed Workers: [?RUS_number_of_workers]\nPercent of Peasents: [?RUS_number_of_peasents]"
