--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -484,6 +484,10 @@
   PBNews.124.d:0 "The Victory of the Royalists in Italy was short lived. Once maligned, the Italian left seized the opportunity of the December Putsch War and the aftermath to take control of the state apparatus. Supported by sympathetic reserve divisions and heavily armed Self Defense Units, elements of the Italian Anarchist Federation took control of the capital to proclaim a new revolutionary government.\n\nWith the North far from pacified, and the South still deeply conservative, the future of Anarchist Italy is unclear."
   PBNews.124.a:0 "First as tragedy, then as farce"
 
+  PBNews.125.t:0 "KIRILL'S FALL"
+  PBNews.125.d:0 ""
+  PBNews.125.a:0 "Moderates have no place in Russia"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
