--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -9,7 +9,7 @@
   FRA_Peace_With_Britain:0 "A Peace With Honour Has Been Signed With Britain"
 
   ##########################
-  # Leader Descriptions
+  # Leader And General Descriptions
   ##########################
 
   PB_Jacques_Doriot_Desc:0 "§YBorn:§! 26/9/1898\n\n§YJacques Doriot§! is something of an enigma in French politics. Born to a working class family in Saint Denis, near Paris. At an early age, Doriot was exposed to the revolutionary politics of wartime France. Far too young to join the military at the onset of the Great War, Doriot could only watch from the sidelines as France began to shudder and break under the strain of war. As supplies dwindled daily and the sounds of gunfire approached Paris, Doriot's family fled to Orléans, where they would remain until the end of the conflict.\n\nThe collapse of the French Empire and the imposition of a Republic would catapult the nation into a period of intense unrest. Revolutionaries, restorationists and common thugs battled in the streets over what was left of the French corpse. It was in this pressure cooker political scene that Doriot would begin his rise to power. Initially a member of the Socialist Youth League, he abandoned left wing politics after the failed September Paris Uprising in 1926. Instead, he aligned himself with the newly formed French Popular Front and Marcel Déat, and by 1928 the FPF had taken the reigns of the Republic in a coalition with the pro-monarchist Action Française. Déat died suddenly in 1929 and the subsequent power struggle ended with Doriot seizing control of the party, though at the cost of major concessions to the AF and the Left-Nationalists. Now the de-facto dictator of France, Jacques Doriot seeks revenge against the Germans and the re-establishment of France's dominance in Europe. The French population, radicalized by Long Depression and the Treaty of Tours, stand united, at least on paper, with the Grand Marshal's vision of a new imperial France.\n\n§RAcross the border lies the enemy of the French people, and it is the holy duty of the Grand Marshal to exorcise this degenerate Judeo-Germanic curse from Europe, no matter the cost!§!"
@@ -17,6 +17,50 @@
   PB_Charles_Muarras_Desc:0 "§YBorn:§! 20/4/1868\n\n§YCharles Maurras§! is considered by some as France's most loyal patriot, and by others as a crooked old fool that believes in bygone traditions. Whatever the case may be one thing for sure is Maurras and his cronies remain adamant on the return of the Bourbon dynasty, which has remained in exile in Corsica since the Great War. Before the Great War Maurras was a self-employed author mainly writing non-fiction books on political science, taking inspiration from various pre-20th century philosophies, namely Existentialism and Phenomenology.\n\nMaurras lived a rather poor life finding only minor success in a few written texts but by the end of the Great War this difficulty only became worse. Food stalls became a permanent fixture of Maurras' life until a small pro-monarchist printing agency hired him. From there Maurras rose through the ranks and established himself as a fairly notable writer, ultimately becoming head of the New Kings League newspaper company.\n\nBy 1927 the political landscape of France was by all definitions an utter shit show. Strikes and protests occurred almost daily and from this point on Maurras started to present himself as the man with all the solutions, gathering public support and finding a 'comfortable' position in the newly founded Front Populaire Français. Today Charles Maurras stands victorious in the triumvirate and though stability is finally restored, to some degree, reconstruction and preperation for Europe's 'darkest years' is required if France is to outlive the storm.\n\n§RAll heil Maurras!§!"
 
   PB_Inessa_Armand_DESC:0 "§YBorn:§! 8/5/1874\n\n§YInessa Armand§! can only be described as both revolutionary and counter-revolutionary. She developed Armandism - a form of social nationalism - by borrowing elements from different political extremes and combining them into one heterogenous belief. Armand gained much renown between middle-lower class individuals during the unruly years of 1926-1928, participating in numerous strikes and boycotts. While not exactly Jacobin Armand does contain a certain distrust of those on top, hence her clique being the weakest of the triumvirate.\n\nPrior and during the Great War Armand served as an auxiliary nurse, seeing first hand the effects and brutalities of conflict unlike the other triumvirate members. Even when the war was over peace had not fallen upon France. The years following, especially those before 1929, were ravaged with social and political strife; something that worked greatly in favour for Armand. By the time the Front Populaire Français was established Inessa Armand was already a well known name amongst the French people. With her political rivals now dead, Armand can now fully realize her perfect France.\n\n§RGod bless our Jeanne, and our liberated France!§!"
+
+  PB_Joseph_Darmand_DESC:0 ""
+
+  PB_Xavier_Vallat_DESC:0 ""
+
+  PB_Gabrielle_Chanel_DESC:0 ""
+
+  PB_Maurice_Gamelin_Desc:0 "§YBorn:§! 20/9/1872\n\n§YMaurice Gamelin§! is France's greatest tactician. Being born in a rural town just outside of central Paris exposed Mr. Gamelin to a mixed life of odd-urban jobs and the occasional summer wheat field retreat, though times have changed. The France he once saw burn has risen once again, ready to toy with her weak prey and establish herself as Europe's greatest empire.\n\nWhen the German's came knocking on Paris' door Petain and his hastly cobbled defence force did little in preventing the fall of the French capital; Gamelin and the rest of the officer corp as a result retreated to Tours with a small contingency force being sent to Orleans. Here his skills truly shined, even though France had entered her dying hour enough time had passed for Gamelin to be promoted to lieutenant. The small operational force he operated under (which amounted to nothing greater than 4000 men) captured a vital supply line that cost the Germans and British a great deal in their campaigns, managing to hold out under continous siege till the wars end. As France enters a new age Gamelin, and many others just like him, must help France pave her way to greatest; else she shall once again fall."
+
+  PB_Louis_Franchet_Desc:0 ""
+
+  PB_Hubert_Lyautey_Desc:0 ""
+
+  PB_Charles_de_Gaulle_Desc:0 ""
+
+  PB_Theophile_Brebant_Desc:0 ""
+
+  PB_Claire_Chennault_Desc:0 ""
+
+  PB_Charles_Huntziger_Desc:0 ""
+
+  PB_Henri_Giraud_Desc:0 ""
+
+  PB_Alphonse_Georges_Desc:0 ""
+
+  PB_Paul_Legentilhomme_Desc:0 ""
+
+  PB_Maxime_Weygand_Desc:0 ""
+
+  PB_Jean_Tassigny_Desc:0 ""
+
+  PB_Georges_Catroux_Desc:0 ""
+
+  PB_Alphonse_Juin_Desc:0 ""
+
+  PB_Gabriel_Auphan_Desc:0 ""
+
+  PB_Jean_Marie_Abrial_Desc:0 ""
+
+  PB_Henri_Blehaut_Desc:0 ""
+
+  PB_Francois_Darlan_Desc:0 ""
+
+  PB_Emile_Muselier_Desc:0 ""
 
   ##########################
   # Focus Tooltips
