djbouti more like your moms booty
we like to troll

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -690,9 +690,13 @@ PB_RUS_peasent_worker_decisions_desc:0 "Percent of Unemployed Workers: [?RUS_num
 PB_RUS_at_least_three_workers:0 "At least 3% of the population is unemployed workers"
 RUS_percent_of_workers_minus_three_percent:0 "Three percent of unemployed workers will become workers"
 
-  PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
-  PB_RUS_religion_decisions_desc:0 "we must turn everyone in russia to fucking rasputinism"
-  PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName]"
+PB_RUS_supporting_sagallo:0 "Sending Support to Sagallo"
+PB_RUS_supporting_sagallo_desc:0 "Djbouti more like I am in your moms Booty"
+PB_RUS_sagallo_infrastructrue:0 "Sagallo Infrastructure Campaign"
+PB_RUS_sagallo_infrastructrue_desc:0 ""
+PB_RUS_sagallo_civs:0 "Sagallo Civilian Development"
+PB_RUS_sagallo_mils:0 "Sagallo Arms Development"
+PB_RUS_sagallo_war_propoganda_campaign:0 "Sagallo War Propoganda Campaign"
 
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
