--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -147,6 +147,12 @@
   PB_GER_Long_Term_Investment:0 "Long Term Economic Investment Model"
   PB_GER_Long_Term_Investment_1:0 "Long Term Economic Investment Model"
   PB_GER_Long_Term_Investment_2:0 "Long Term Economic Investment Model"
+  PB_GER_Maximum_Production:0 "Production Effiency Model"
+  PB_GER_Maximum_Production_1:0 "Production Effiency Model"
+  PB_GER_Maximum_Production_2:0 "Production Effiency Model"
+  
+  PB_GER_Rathenau_Total_War:0 "The Next Phase of Total War"
+  
 
   ##########################
   # FOCUSES
@@ -755,12 +761,20 @@
   PB_GER_Bail_Out_Czech_Steel:0 "Bail Out the Bohemian Steel Companies"
   PB_GER_Universal_Minimum_Employment_Act:0 "The Universal Minimum Employment Act"
   PB_GER_First_Recovery:0 "First Stages of Recovery Complete"
-
   PB_GER_Revitalize_Berlin:0 "Revitalize the Berlin Industries"
   PB_GER_Buy_Up_Unsold_Crops:0 "Buy Up Excess Unsold Crops"
   PB_GER_Reopen_Vienna_Stock_Exchange:0 "Reopen the Vienna Stock Exchange"
   PB_GER_Culturework_Programme:0 "The Kulturarbeit Programme"
   PB_GER_Second_Recovery:0 "Further the Economic Recovery"
+
+  PB_GER_War_Economy_Project:0 "Rathenau's Ideal War Economy"
+  PB_GER_War_Economy_Project_desc:0 "\n\n\n\n\n\nThere are some people who believe that war is just an affair like in old times.\nThe young men volunteer or get drafted for war while the civilians will wait in their homes for the war to be won or lost.\n\n§RHowever this type of war does not exist anymore.§!\n\nIn these times every single person in Germany now, has the obligation to contribute to the war effort. Almost all means are necassary to archieve victory. Because defeat in this war is far more horrible then in the last one. The things we love, the things we want to do, the things we often do not realize are so precious to us. If we lose this war it will mean the end of all these things. This is war of survival, a battle for our loved ones, a crusade against the apocalypse.\n"
+  PB_Our_Idea_of_Total_War:0 "The Idea of Total War"
+  PB_War_Woman_in_Workforce:0 "Women in the Industrial Workforce"
+  PB_Guestworkers_for_the_Industry:0 "Invite Large Amounts of Guestworkers"
+  PB_Private_Interests_of_arms_companies:0 "Ignore the Private Interests of Arms Companies"
+  PB_Reestablish_the_War_Raw_Material_Dep:0 "Reeestablish the “Raw War Materials Department“"
+  PB_Maximising_War_Production:0 "Maximising Wartime Production"
 
   ##########################
   # KINGDOMS MECHANIC
@@ -943,6 +957,8 @@
   czech_steel_tt:0 "Has completed Decision §Y"Bail Out the Bohemian Steel Companies"§!"
   industrial_recovery_tt:0 "Has completed Decision §Y"National Industrial Recovery Act"§!"
   employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
+
+  PB_GER_tt_war_eco:0 "§RWhen War with Russia and France breaks out, Germany will immediatly enable it's Total War Economy§!"
   
 
   ##########################
