Loc and GFX fix

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -321,12 +321,12 @@
   PBNews.83.a:0 "Hold The Line!"
 
   PBNews.84.t:0 "BRITTANY FALLS"
-  PBNews.84.d:0 ""  
-  PBNews.84.a:0 "Is this a prelude to greater action?"
+  PBNews.84.d:0 "The small coastal national of Brittany has finally fallen to foreign invasion. The armies of France have managed to destroy the Brittanian military, marching upon the capital not long afterwards. Under the threat of total annihilation, what little remains of the Brittanian government announced their capitulation to the invaders just hours later. Though some guerilla resistance is expected, Brittany’s story has finally come to an end."  
+  PBNews.84.a:0 "Is This A Prelude To Greater Action?"
 
   PBNews.85.t:0 "FRANCE WALKS INTO LIEGE"
-  PBNews.85.d:0 ""  
-  PBNews.85.a:0 "Another nation gone dark"
+  PBNews.85.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation, quickly realising it stood little chance against the might of the French military, immediately entered talks with France. After several days of tense negotiation, Wallonia has accepted annexation by France with the terms of this agreement not yet known to the public. Though this agreement has delayed a major conflict, France’s expanding ambitions seemingly makes future conflict inevitable. "  
+  PBNews.85.a:0 "Another Nation Gone Dark"
 
   PBNews.86.t:0 "FRANCE MARCHES TO WALLONIA"
   PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible."  
@@ -348,13 +348,13 @@
   PBNews.90.d:0 ""  
   PBNews.90.a:0 "An Achievement For All Mankind"
 
-  PBNews.91.t:0 "UNKNOWN TRIBE FOUND IN BRAZIL"
+  PBNews.91.t:0 "UNKNOWN TRIBES IN BRAZIL"
   PBNews.91.d:0 ""  
   PBNews.91.a:0 "The Age Of Exploration Has Yet To End"
 
-  PBNews.92.t:0 "PAX AMERICANA REACHES 100 MILLION SALES"
+  PBNews.92.t:0 "PAX AMERICANA SETS RECORDS"
   PBNews.92.d:0 ""  
-  PBNews.92.a:0 "Since When Did Alternative History Become Profitable"
+  PBNews.92.a:0 "Since When Did Alternative History Become Profitable?"
 
   PBNews.93.t:0 "KÖLNER BC 01 VICTORY"
   PBNews.93.d:0 "German Football is really the sport of passion and miracles.\nThe German Football Club Kölner Ballspiel-Club 1901 from Cologn was not even of one biggest clubs of their town and were initially just hoping that they would get a chance to win the West German Cup. Suprinsingly they won it and qualified for the German Championship where the strongest teams from all out of Germany would compete for the title. With heart, passion and a lot of sweat the Kölner made it to the Final where they met their neighbouring rival Fortuna Düsseldorf and subsequently won 1:0."
