--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -773,7 +773,7 @@
   PB_War_Woman_in_Workforce:0 "Women in the Industrial Workforce"
   PB_Guestworkers_for_the_Industry:0 "Invite Large Amounts of Guestworkers"
   PB_Private_Interests_of_arms_companies:0 "Ignore the Private Interests of Arms Companies"
-  PB_Reestablish_the_War_Raw_Material_Dep:0 "Reeestablish the “Raw War Materials Department“"
+  PB_Reestablish_the_War_Raw_Material_Dep:0 "Reestablish the “Raw War Materials Department“"
   PB_Maximising_War_Production:0 "Maximising Wartime Production"
 
   ##########################
@@ -959,7 +959,18 @@
   employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
 
   PB_GER_tt_war_eco:0 "§RWhen War with Russia and France breaks out, Germany will immediatly enable it's Total War Economy§!"
+
+  GER_tt_rathenau_total:0 "§YThe following decisions will allow you to freely pick the strengths of your Total War system.§! §RHowever be careful. Every buff will put great burdens on the people and might cripple the country.§!"
+   
+  GER_tt_rathenau_total_women:0 "§YWomen will replace a lot of the Industrial Armament Workforce and free up direly needed Manpower for the army.§!\n\nThe Next Phase of Total War gains \nRecruitable Population §Y1.00%§!\nStability §R-2.5%§!"
+
+  GER_tt_rathenau_total_guest:0 "§YGuestworkers will replace a lot of the Industrial Armament Workforce and free up direly needed Manpower for the army.§!\n\nThe Next Phase of Total War gains \nRecruitable Population §Y1.00%§!\nStability §R-5%§!"
+
+  GER_tt_rathenau_total_arms_companies:0 "§YThe State Interests in a War are above everything in war. We can not respect the small individual interests of arms and defence companies who supply us weapons. Over the most important factors we need to gain control and force our wills through.§!\n\nThe Next Phase of Total War gains \nConsumer Goods Factories §Y-5%§!\nFactory Output §G+5%§!\nStability §R-5%§!"
   
+  GER_tt_rathenau_total_raw_material_plan:0 "§YIn War the Country needs to use all resources it can get. All of them. Bring us your silver tellers, your steel hoe or your aluminium made pot. The war industry can not cut any corners!§!\n\nThe Next Phase of Total War gains \nResource Penalty on Production §G-10%§!\nStability §R-2.5%§!"
+
+  GER_tt_rathenau_total_raw_maximising_production:0 "§YIn America and Great Britian their armament companies approved high effieceny programs to maximise production at all times. Those programs have seen great results and fit perfectly into our Total War System if we want to adopt them aswell.§!\n\nThe Next Phase of Total War gains \nFactory Output §G+5%§!\nStability §R-5%§!"
 
   ##########################
   # COSMETIC TAGS
