--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿  l_english:
 
   ##########################
   # PEACE FLAGS
@@ -32,7 +32,7 @@ l_english:
 
   PB_Charles_de_Gaulle_Desc:0 "§YBorn:§! 22/11/1890\n\n§YCharles de Gaulle§! was born for war. His father often encouraged discussion into French history and politics during dinner, here Charles become fascinated by French society and the ever changing political climate of the world. He took a keen interest in military strategy and by the age of 19 he joined the École militaire complex as a cadet officer. For the next few years Charles would establish himself as an educated and disciplined officer, and when war came calling on the homefront Charles offered his services to France in any way he saw fit.\n\nHaving seen the horrors of the Great War, and all the new inventions man had created to kill one another Charles had grown wary of a resurgent France. Though it has become ever so clear that France is once again on the war path, as a result Charles has placed his faith in the Popular Front party and now dedicates his time studying military theories both old and new. He may not be France's finest hero, but he is certainly capable of greatness."
 
-  PB_Theophile_Brebant_Desc:0 ""
+  PB_Theophile_Brebant_Desc:0 "§YBorn:§! 24/5/1889\n\n§YTheophile Brebant§! witnessed Paris fall to the German and British hordes. The two week siege left Mr. Brebant terribly shellshocked, endless barrages of earth and metal does unspeakable things to a man and Mr. Brabant wasn't spared the worst of it. He grew a certain dislike of his invaders on a level other men never reach; constructing terrifying stereotypical recreations of the British and German man. Here he would tunnel his emotions towards these imaginative barbarians, it is therefore no surprise that when the SP promoted these very constructions Mr. Brabant quickly fell under their banner.\n\nWhile his outspoken support for the SP could one day cost him his head there are other issues Mr. Brabant must attend to, namely a faulty liver that he must repeatedly seek medical support for. Everyday his medical condition is worsened and his operational capacity is weakened, it seems France's greatest decade may be an unfinished paragraph in Mr. Brabant's story."
 
   PB_Claire_Chennault_Desc:0 ""
 
