--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -345,6 +345,7 @@
   RUS_kirill_will_of_the_russian_bear:0 "Will of the Russian Bear"
   RUS_kirill_biological_terrors_unleashed:0 "Biological Terrors, Unleashed"
   RUS_kirill_strength_of_the_russian_bear:0 "Strength of the Russian Bear"
+
   ##########################
   # EVENTS
   ##########################
@@ -680,8 +681,8 @@ RUS_propoganda_workshops:0 "Propoganda Workshops"
   PB_RUS_A_Militarized_Economy:0 "A Militarized Economy"
 
   ###ALEXANDRA DECISIONS
-  PB_RUS_religion_decisions:0 "Converting Russia to Strannikism"
-  PB_RUS_religion_decisions_desc:0 "\n\n\n\n\n\nwe must turn everyone in russia to fucking rasputinism\n\n\n\n"
+  PB_RUS_religion_decisions:0 "Converting Russia To Strannikism"
+  PB_RUS_religion_decisions_desc:0 "\n\n\n\n\n\nWith major effets now under way to convert the Russian people to Rasputin's religious cult we must now focus our attention to those that refuse conversion. This will be no simple feat and unsurprisingly there will be contention between reformed and non-reformed individuals.\n "
   PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName] (Urban)"
   PB_RUS_religion_decision_rural:0 "Promote Strannikism in [FROM.GetName] (Rural)"
 
@@ -1262,8 +1263,6 @@ RUS_propoganda_workshops:0 "Propoganda Workshops"
   alexei_secure_the_state_1_desc:0 "Even as our regime institutes its rightful rule over the nation, our ideology is unpopular with much of the old establishment and a sizable portion of the people. This is why it is pertinent that we ensure that none of our enemies can mount a sufficient counter attack that may endanger our rule, or our beloved Tsar Alexei."
   PB_RUS_alexei_white_guard_arrest_revolutionaries:0 "Arrest Dissident Revolutionaries"
   
-
-
   # KIRILL #
   PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
   PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC] ([?PB_RUS_kirill_house_influence])\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC] ([?PB_RUS_kirill_mob_influence])\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC] ([?PB_RUS_kirill_intelligentsia_influence])\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC] ([?PB_RUS_kirill_hidden_enemy_influence])"
