--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -682,7 +682,7 @@ RUS_propoganda_workshops:0 "Propoganda Workshops"
 
   ###ALEXANDRA DECISIONS
   PB_RUS_religion_decisions:0 "Converting Russia To Strannikism"
-  PB_RUS_religion_decisions_desc:0 "\n\n\n\n\n\nWith major effets now under way to convert the Russian people to Rasputin's religious cult we must now focus our attention to those that refuse conversion. This will be no simple feat and unsurprisingly there will be contention between reformed and non-reformed individuals.\n "
+  PB_RUS_religion_decisions_desc:0 "\n\n\n\n\n\nWith major effects now under way to convert the Russian people to Rasputin's religious cult we must now focus our attention to those that refuse conversion. This will be no simple feat and unsurprisingly there will be contention between reformed and non-reformed individuals.\n "
   PB_RUS_religion_decision:0 "Promote Strannikism in [FROM.GetName] (Urban)"
   PB_RUS_religion_decision_rural:0 "Promote Strannikism in [FROM.GetName] (Rural)"
 
