Bob der Baumeister
- Liberal Diplomacy Focuses Extented

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -115,6 +115,8 @@
   PB_GER_Philip_Compensation:0 "Philippines Self Governing Support"
 
   PB_GER_Relief_Packages:0 "Relief Packages"
+  PB_GER_Construction_Forts:0 "Festung Germanien"
+  PB_GER_More_Rations:0 "War Rationing Plan"
 
   PB_GER_Rhineland_Unrest_Critical:0 "High Unrest in the Rhineland"
   PB_GER_Rhineland_Unrest_Moderate:0 "Moderate Unrest in the Rhineland"
@@ -200,7 +202,7 @@
   PB_GER_cooperate_socialist:0 "Cooperation with the Socialists"
   PB_GER_Protect_Jewish_Institutions:0 "Protecting the Rights of Women and Jews"
   PB_GER_negotiate:0 "Negotiating with the German States"
-  PB_GER_technological_advance:0 "Technological Advancements, Our Speciality"
+  PB_GER_technological_advance:0 "Technology Our Speciality"
   PB_GER_ready_the_economy:0 "Preparing the Economy for War"
   PB_GER_no_time_heroes:0 "Times of Comfort are Over"
   PB_GER_moral_standards:0 "Propaganda for Moral Standards"
@@ -424,10 +426,10 @@
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
   PB_GER_Hugenberg_Line:0 "The Hugenberg Line"
-  PB_GER_Trust_Mackensen:0 "Trust Mackensen"
+  PB_GER_Emergency_Directives:0 "Emergency Directives"
   PB_GER_War_Rationing_Plan:0 "The War Rationing Plan"
   PB_GER_Rhine_Line:0 "Die Wacht am Rhein"
-  PB_GER_Woman_In_Military:0 "Woman in the Military"
+  PB_GER_Woman_In_Military:0 "Woman in the Airforce"
   PB_GER_Colonial_Army:0 "Increase the Colonial Army"
   PB_GER_Colonial_Soldiers:0 "Improve Professionalism for Colonial Soldiers"
   PB_GER_Argonne_Line:0 "Fortifications in the Argonne"
@@ -947,9 +949,9 @@
   french_terrorism_2:0 "The Alsace National Union Party"
   
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
-  GER_PB_Tooltip_Costs:0 "§YThe Decision Cost, to reduce Unrest in the Volksstaaten, will be§! §Greduced and made all the same.§!"
+  GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
 
-  GER_Secret_War_Economy:0 "§YDecisions will be unlocked to prepare Rathenau's Ideal Total War System§!\n§RDo not underestimate the German Economy!§!"
+  GER_Secret_War_Economy:0 "£decision_icon_small Decisions will be §Yunlocked§! to prepare Rathenau's Ideal Total War System\n§RDo not underestimate the German Economy!§!"
 
   GER_Sudwestafrika_Elite_Division_tt:0 "§YSüdwestafrika will receive an elite division to bolster their fighting strength.§! "
 
@@ -957,6 +959,8 @@
   czech_steel_tt:0 "Has completed Decision §Y"Bail Out the Bohemian Steel Companies"§!"
   industrial_recovery_tt:0 "Has completed Decision §Y"National Industrial Recovery Act"§!"
   employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
+
+  GER_Unlock_Emergency_Directives:0 "£decision_icon_small Unlocks §YDecisions§! to activate Emergency Directives to gain the right to change laws in Wartime."
 
   PB_GER_tt_war_eco:0 "§RWhen War with Russia and France breaks out, Germany will immediatly enable it's Total War Economy§!"
 
