--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -26,6 +26,7 @@
  VICTORY_POINTS_11544:0 "Nürnberg"
  VICTORY_POINTS_9515:0 "Regensburg"
  VICTORY_POINTS_11417:0 "Würzburg"
+ VICTORY_POINTS_11513:0 "Saarbrücken"
  VICTORY_POINTS_6287:0 "Copenhagen"
  VICTORY_POINTS_3325:0 "Odense"
  VICTORY_POINTS_6364:0 "Aarhus"
