FRA loc and gfx plus other shit

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -299,7 +299,7 @@
   French.23.b:0 "No need for Diplomacy"
 
   French.24.t:0 "France Demands Annexation"
-  French.24.d:0 ""
+  French.24.d:0 "France, the nation that had us subjected for many years, has demanded that we join them, or we will be invaded. We have two options; we either concede willingly, and avoid bloodshed like cowards, or we fight like the brave men we are to defend Brittany’s independence from oppressors. We must decide quickly, as French soldiers are congregating at the border as we speak!"
   French.24.a:0 "Vive la France!"
   French.24.b:0 "Vive la Brittany! We shall resist!"
 
