--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -639,6 +639,43 @@ RUS_propoganda_workshops:0 "Propoganda Workshops"
   PB_RUS_topic_eight_the_future_of_russia_desc:0 ""
   PB_RUS_stability_ensured:0 "Stability Ensured"
   PB_RUS_stability_ensured_desc:0 ""
+PB_Alexandra_Eurasian_Congress.1.t:0 "The First Eurasian Congress"
+PB_Alexandra_Eurasian_Congress.1.d:0 ""
+PB_Alexandra_Eurasian_Congress.1.a:0 "Let's Hope It Goes Well"
+PB_Alexandra_Eurasian_Congress.2.t:0 "Polish Independence?"
+PB_Alexandra_Eurasian_Congress.2.d:0 ""
+PB_Alexandra_Eurasian_Congress.2.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.2.b:0 "No"
+PB_Alexandra_Eurasian_Congress.3.t:0 "A Pontic State?"
+PB_Alexandra_Eurasian_Congress.3.d:0 ""
+PB_Alexandra_Eurasian_Congress.3.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.3.b:0 "No"
+PB_Alexandra_Eurasian_Congress.4.t:0 "Constantinople?"
+PB_Alexandra_Eurasian_Congress.4.d:0 ""
+PB_Alexandra_Eurasian_Congress.4.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.4.b:0 "No"
+PB_Alexandra_Eurasian_Congress.5.t:0 "Baltic Annexation?"
+PB_Alexandra_Eurasian_Congress.5.d:0 ""
+PB_Alexandra_Eurasian_Congress.5.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.5.b:0 "No"
+PB_Alexandra_Eurasian_Congress.6.t:0 "Balkan Expansion?"
+PB_Alexandra_Eurasian_Congress.6.d:0 ""
+PB_Alexandra_Eurasian_Congress.6.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.6.b:0 "No"
+PB_Alexandra_Eurasian_Congress.7.t:0 "Alaskan Administration?"
+PB_Alexandra_Eurasian_Congress.7.d:0 ""
+PB_Alexandra_Eurasian_Congress.7.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.7.b:0 "No"
+PB_Alexandra_Eurasian_Congress.8.t:0 "Policy in Manchuria?"
+PB_Alexandra_Eurasian_Congress.8.d:0 ""
+PB_Alexandra_Eurasian_Congress.8.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.8.b:0 "No"
+PB_Alexandra_Eurasian_Congress.9.t:0 "The Future of Russia?"
+PB_Alexandra_Eurasian_Congress.9.d:0 ""
+PB_Alexandra_Eurasian_Congress.9.a:0 "Yes"
+PB_Alexandra_Eurasian_Congress.9.b:0 "No"
+
+
 
   PB_RUS_The_Great_March_Forward:0 "The Great March Forward"
   PB_RUS_Trust_In_Ponomarenko:0 "Trust In Ponomarenko"
