--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -961,6 +961,8 @@
   employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
 
   GER_Unlock_Emergency_Directives:0 "£decision_icon_small Unlocks §YDecisions§! to activate Emergency Directives to gain the right to change laws in Wartime."
+  
+  GER_Milita_Spawning:0 "Several §YMilitia Battalions will be formed§! in the Major Cities to Safeguard their Defences against Enemy Breakthroughs or Paratrooper Attacks"
 
   PB_GER_tt_war_eco:0 "§RWhen War with Russia and France breaks out, Germany will immediatly enable it's Total War Economy§!"
 
