--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -26,7 +26,14 @@
  VICTORY_POINTS_11544:0 "Nürnberg"
  VICTORY_POINTS_9515:0 "Regensburg"
  VICTORY_POINTS_11417:0 "Würzburg"
- VICTORY_POINTS_11513:0 "Saarbrücken"
+ VICTORY_POINTS_11531:0 "Saarbrücken"
+ VICTORY_POINTS_537:0 "Küstrin"
+ VICTORY_POINTS_309:0 "Oldenburg" 
+ VICTORY_POINTS_11360:0 "Emden" 
+ VICTORY_POINTS_6535:0 "Münster" 
+ VICTORY_POINTS_405:0 "Bielefeld" 
+ VICTORY_POINTS_6549:0 "Kassel" 
+ VICTORY_POINTS_9630:0 "Bozen"
  VICTORY_POINTS_6287:0 "Copenhagen"
  VICTORY_POINTS_3325:0 "Odense"
  VICTORY_POINTS_6364:0 "Aarhus"
